Edited wiki page V8Convert_ClassCreator through web user interface.

--- a/wiki/V8Convert_ClassCreator.wiki
+++ b/wiki/V8Convert_ClassCreator.wiki
@@ -186,8 +186,9 @@ The ordering of declarations for CC policies is not always intuitive or immediat
   * `TypeName`, if used, should go first.
   * `ClassCreator_TypeID`, if used, should go next.
   * `ClassCreator_Factory` is normally required (the default implementation only supports a single default ctor taking no arguments).
+  * `JSToNative_ClassCreator` (a convenience base class) invokes several other policies, so it normally needs to come late in the declarations. See the docs for that policy later on down this page.
 
-The remaining orderings depend largely on how each policy is implemented and what other conversion operations they use. If they are declared separately from their implementations then there is rarely any ordering problems except in some cases where a subclassed policy invokes e.g. a not-yet-legal `JSToNative` conversion. However, separating the declarations and implementations can be tedious. It is, however, the safest best in terms of getting the ordering correct so that none of the specialized policies are actually instantiated until after they are invoked. Instantiating them too early will pick up an invalid (either type-wise or semantically) default specialization.
+The remaining orderings depend largely on how each policy is implemented and what other conversion operations they use. If they are declared separately from their implementations then there is rarely any ordering problems except in some cases where a subclassed policy invokes e.g. a not-yet-legal `JSToNative` conversion. However, separating the declarations and implementations can be tedious. It is, however, the safest best in terms of getting the ordering correct so that none of the specialized policies are invoked before they are declared. Instantiating (invoking) them too early will pick up an invalid (either type-wise or semantically) default specialization. Compilation will normally fail in such cases, and linking will fail in most others (with undefined symbol errors, normally meaning the template was never specialized for the given bound type but it was invoked somewhere and that invocation picked up an "invalid" default template). i've never seen a case where a "wrong" specialization both compiled and linked, though i can imagine that there are corner cases where that might theoretically happen.
 
 == `TypeName` ==
 
