--- a/wiki/V8Convert_Whio.wiki
+++ b/wiki/V8Convert_Whio.wiki
@@ -443,3 +443,13 @@ Memory usage:
 The underlying C bits, not counting the few bytes for the C++ wrapper, generally need _less than 1kb_ of dynamically-allocated memory for typical use cases (only a couple of p-files opened at a time). i.e. an EPFS container only needs about 2-3 times the memory of an `fopen()`ed `FILE` handle (which allocates over 400 bytes on my machine). Each _opened_ inode needs additional memory to manage its mutable state and its block chain (_somewhere around_ 48 bytes + 8 bytes per data block owned by the inode). When an inode is opened multiple times, most of that memory is shared amongst all opened copies. Only _opened_ inodes with _really long_ block chains use any significant amount of memory (potentially even growing larger than a massive _100 bytes_! ;).
 
 The point of all that is - whio, _especially_ EPFS, is heavily optimized for a _very small_ memory footprint (smaller than many JSON strings and other client-side constructs). The JS side of the bindings _certainly_ takes up more memory than the lower-level bits do (but how much the v8 side requires is essentially unknowable, depending on implementation details of v8).
+
+
+= Notes about the C++/v8 Binding Implementation =
+
+This API is a mixture of 3rd-party code (libwhio, with a core implemented in C and C++ wrapper on top of that) and libv8 (C++ and JS), with [V8Convert] sitting between them to convert the types and function calls between C/C++ and JS. All of the whio-provided classes described on this page come "directly" from libwhio, requiring _no_ additional level of JS-related subclassing or redirection in order to bind them to JS (as if often the case when binding classes). The "no extra layer of indirection" implementation is made possible (and easy to do) by the [V8Convert] core supported the [V8Convert_ClassLoader] class-binding mechanism. A relatively small handful of function bindings require a layer of hand-written functions because the C++ and JS world-views are incompatible here or because of intentional semantic differences in the JS/C++ interfaces. The notable examples are `(size_t read(void*,size_t))` and `(size_t write(void const *,size_t))`, which cannot be generically represented 1-to-1 in JS. We also wrote some constructor shims in order to implement some special-case ownership semantics which could not be automated. The vast majority of the function/member bindings required no hand-written shims, just (hand-written) instantiations of various [V8Convert]-provided templates.
+
+The implementation files can be found here:
+
+  * [http://code.google.com/p/v8-juice/source/browse/convert/addons/whio/cvv8- whio.hpp cvv8-whio.hpp]
+  * [http://code.google.com/p/v8-juice/source/browse/convert/addons/whio/cvv8- whio.cpp cvv8-whio.cpp]
