--- a/wiki/V8Convert_Whio.wiki
+++ b/wiki/V8Convert_Whio.wiki
@@ -447,7 +447,7 @@ The point of all that is - whio, _especially_ EPFS, is heavily optimized for a _
 
 = Notes about the C++/v8 Binding Implementation =
 
-This API is a mixture of 3rd-party code (libwhio, with a core implemented in C and C++ wrapper on top of that) and libv8 (C++ and JS), with [V8Convert] sitting between them to convert the types and function calls between C/C++ and JS. All of the whio-provided classes described on this page come "directly" from libwhio, requiring _no_ additional level of JS-related subclassing or redirection in order to bind them to JS (as if often the case when binding classes). The "no extra layer of indirection" implementation is made possible (and easy to do) by the [V8Convert] core supported the [V8Convert_ClassLoader] class-binding mechanism. A relatively small handful of function bindings require a layer of hand-written functions because the C++ and JS world-views are incompatible here or because of intentional semantic differences in the JS/C++ interfaces. The notable examples are `(size_t read(void*,size_t))` and `(size_t write(void const *,size_t))`, which cannot be generically represented 1-to-1 in JS. We also wrote some constructor shims in order to implement some special-case ownership semantics which could not be automated. The vast majority of the function/member bindings required no hand-written shims, just (hand-written) instantiations of various [V8Convert]-provided templates.
+This API is a mixture of 3rd-party code (libwhio, with a core implemented in C and C++ wrapper on top of that) and libv8 (C++ and JS), with [V8Convert] sitting between them to convert the types and function calls between C/C++ and JS. All of the whio-provided classes described on this page come "directly" from libwhio, requiring _no_ additional level of JS-related subclassing or redirection in order to bind them to JS (as if often the case when binding classes). The "no extra layer of indirection" implementation is made possible (and easy to do) by the [V8Convert] core supported the [V8Convert_ClassCreator] class-binding mechanism. A relatively small handful of function bindings require a layer of hand-written functions because the C++ and JS world-views are incompatible here or because of intentional semantic differences in the JS/C++ interfaces. The notable examples are `(size_t read(void*,size_t))` and `(size_t write(void const *,size_t))`, which cannot be generically represented 1-to-1 in JS. We also wrote some constructor shims in order to implement some special-case ownership semantics which could not be automated. The vast majority of the function/member bindings required no hand-written shims, just (hand-written) instantiations of various [V8Convert]-provided templates (mostly from [V8Convert_XTo] and [V8Convert_ClassCreator]).
 
 The implementation files can be found here:
 
