--- a/wiki/V8Convert_Whio.wiki
+++ b/wiki/V8Convert_Whio.wiki
@@ -344,26 +344,26 @@ Please see the native `whio_epfs_foreach_inode()` for more information.
 
 == Pseudofiles ==
 
-"Pseudofiles" (a.k.a. p-files) are the "files" which live within an EFS container.
+"Pseudofiles" (a.k.a. p-files) are the "files" which live within an EFS container. Sometimes the term inode and p-file are used interchangeably, as a p-file is really just a handle to an opened inode in the EFS storage (equivalent to an opened file).
 
 *ACHTUNG:* is it critical that all p-files opened from a given EFS be `close()`d _BEFORE_ their containing EFS is `close()`d, or Undefined Behaviour ensues.
 
-They are created only via `EPFS.open()`. `Pseudofile` is a full-fledged `IODev` subclass and adds the following methods:
+Instances of `whio.EPFS.PseudoFiles` are _not_ created via constructor calls - they are created _only_ using `EPFS.open()`. `PseudoFile` is a full-fledged `IODev` subclass and adds the following methods:
 
 || *Member* || *Description* ||
 || `int touch([Date|uint32=currentTime])` || Sets the device's modification timestamp to the given Unix Epoch time. Returns the new (touched) time. ||
 || `uint32 mtime` || Get or set the modification time as a `uint32` Unix Epoch timestamp. Note that the JS `Date` class uses (Epoch + milliseconds) time. ||
-|| `uint32 clientFlags` || Gets or sets the "client flags" (32-bit integer) associated with the p-file. ||
-|| `uint inodeId` || Gets the EPFS inode ID of the p-file. ||
-|| `string name` || Gets or sets the p-file's name. Setting only works if a namer has been installed on the EFS. ||
+|| `uint32 clientFlags` || Gets or sets the "client flags" (32-bit unsigned integer) associated with the p-file. ||
+|| `uint inodeId` || Gets the EPFS inode ID of the p-file. It is guaranteed to be non-0. Setting this causes an exception. ||
+|| `string name` || Gets or sets the p-file's name. If the parent EFS has no namer then accessing this property will throw an exception. (FIXME: only throw when _setting_ i that case, else return `null`.)||
 
 === Important Notes ===
 
   * Is it _critical_ that all p-files opened from a given EFS be `close()`d _BEFORE_ their containing EFS is `close()`d, or Undefined Behaviour ensues.
   * `EPFS.unlink()` will fail for any inode which is currently opened.
-  * It is legal to have a given inode (p-file) opened multiple times, but the client app must carefully synchronize such use if we wants to avoid mixed writes and such.
+  * It is legal to have a given inode (p-file) opened multiple times, but the client app must carefully synchronize such use if he wants to avoid "interweaving" data written via multiple handles.
   * _NEVER_ use a p-file handle from any thread except the one which created it. Violating this _will_ eventually lead to EFS corruption.
-  * Do not use p-files from `setTimeout()` (or similar), as this could potentially cause "interweaving" of certain non-atomic write operations (the same problem as with multi-threading).
+  * Do not use p-files from `setTimeout()` (or similar), as this could potentially cause "interweaving" of certain non-atomic write operations (the same problem as with multi-threading), which _will_ lead to corruption at some point.
 
 === Creating and Opening Pseudofiles ===
 
